--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,8 +1,9 @@
 name: build-and-test
 on:
   workflow_dispatch:
-  push:
-
+  branches: [ main ]
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+*'
   merge_group:
   pull_request:
 env:
@@ -68,7 +69,23 @@ jobs:
           - windows
           - linux
         group:
-          - ocb-collector
+          - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
+          - other
     runs-on: ubuntu-latest
     needs: [setup-environment]
     steps:
@@ -120,7 +137,22 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - ocb-collector
+          - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -223,10 +255,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.23.0"] # 1.20 is interpreted as 1.2 without quotes
+        go-version: ["1.23.6"] # 1.20 is interpreted as 1.2 without quotes
         runner: [ubuntu-latest]
         group:
-          - ocb-collector
+          - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
+          - other
     runs-on: ${{ matrix.runner }}
     needs: [setup-environment]
     steps:
@@ -301,7 +349,22 @@ jobs:
       fail-fast: false
       matrix:
         group:
-          - ocb-collector
+          - receiver-0
+          - receiver-1
+          - receiver-2
+          - receiver-3
+          - processor-0
+          - processor-1
+          - exporter-0
+          - exporter-1
+          - exporter-2
+          - exporter-3
+          - extension
+          - connector
+          - internal
+          - pkg
+          - cmd-0
+          - cmd-1
 
     runs-on: ubuntu-latest
     needs: [setup-environment]
@@ -309,7 +372,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -347,7 +410,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -373,7 +436,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -443,7 +506,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Cache Go
         id: go-cache
@@ -544,7 +607,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: "1.23.6"
           cache: false
       - name: Mkdir bin and dist
         run: |
